RESOLVED FIXED207733
MediaToolbox may not be available; check before calling MTOverrideShouldPlayHDRVideo()
https://bugs.webkit.org/show_bug.cgi?id=207733
Summary MediaToolbox may not be available; check before calling MTOverrideShouldPlayH...
Jer Noble
Reported 2020-02-13 17:21:58 PST
MediaToolbox may not be available; check before calling MTOverrideShouldPlayHDRVideo()
Attachments
Patch (1.56 KB, patch)
2020-02-13 17:22 PST, Jer Noble
no flags
Jer Noble
Comment 1 2020-02-13 17:22:15 PST
Jer Noble
Comment 2 2020-02-13 17:22:59 PST
Maciej Stachowiak
Comment 3 2020-02-13 19:02:30 PST
Comment on attachment 390709 [details] Patch r=me Is there way to make a test for this?
Jer Noble
Comment 4 2020-02-13 19:25:14 PST
Not really. You’d have to literally delete MediaToolbox from the file system in order to induce this condition.
WebKit Commit Bot
Comment 5 2020-02-13 19:48:39 PST
Comment on attachment 390709 [details] Patch Clearing flags on attachment: 390709 Committed r256584: <https://trac.webkit.org/changeset/256584>
WebKit Commit Bot
Comment 6 2020-02-13 19:48:40 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.