MediaToolbox may not be available; check before calling MTOverrideShouldPlayHDRVideo() https://bugs.webkit.org/show_bug.cgi?id=207733 <rdar://problem/59441647>

Reviewed by Maciej Stachowiak.

* platform/mac/PlatformScreenMac.mm:
(WebCore::setShouldOverrideScreenSupportsHighDynamicRange):


Canonical link: https://commits.webkit.org/220703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256584 268f45cc-cd09-0410-ab3c-d52691b4dbfc